--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -3,6 +3,35 @@ layout: page
 ---
 
 <!-- <h2 class="spacing">{{ page.title}}</h2>
--->
 <p>{{page.date | date: '%d %B %Y '}}</p>
 {{content}}
+-->
+<div class="post">
+  <!-- <h1 class="post-title">{{ page.title }}</h1> -->
+  <span class="post-date">{{ page.date | date: '%d %B %Y ' }}</span>
+  {% if page.tags %}  
+  {% for tag in page.tags %}
+    <a href="{{ site.baseurl }}{{ site.tag_page }}#{{ tag | slugify }}" class="post-tag">{{ tag }}</a>
+  {% endfor %}
+  {% endif %}
+  <p></p>
+  <article>
+    {{ content }}
+  </article>
+</div>
+
+<p></p>
+<div class="related">
+  <h3>Related Posts</h3>
+  <ul class="related-posts">
+    {% for post in site.related_posts limit:3 %}
+      <li>
+        <h4>
+          <a href="{{ site.baseurl }}{{ post.url }}">
+            <small>{{ post.title }}</small>
+          </a>
+        </h4>
+      </li>
+    {% endfor %}
+  </ul>
+</div>
