--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -8,10 +8,12 @@ layout: page
 -->
 <div class="post">
   <!-- <h1 class="post-title">{{ page.title }}</h1> -->
-  <span class="post-date">{{ page.date | date: '%d %B %Y ' }}</span>
+  <p></p>
+  <h1 class="post-date">{{ page.date | date: '%d %B %Y   ' }}</h1>
+  <p></p>
   {% if page.tags %}  
   {% for tag in page.tags %}
-    <a href="{{ site.baseurl }}{{ site.tag_page }}#{{ tag | slugify }}" class="post-tag">{{ tag }}</a>
+    <a href="{{ site.baseurl }}{{ site.tag_page }}#{{ tag  | slugify }}" class="post-tag">{{ tag }}</a>
   {% endfor %}
   {% endif %}
   <p></p>
@@ -20,7 +22,7 @@ layout: page
   </article>
 </div>
 
-<p></p>
+<p>&nbsp;</p>
 <div class="related">
   <h3>Related Posts</h3>
   <ul class="related-posts">
