--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -15,7 +15,8 @@ layout: page
   Tags: 
   {% if page.tags %}  
   {% for tag in page.tags %}
-    <a href="{{ site.baseurl }}{{ site.tag_page }}#{{ tag  | slugify }}" class="post-tag"> &nbsp; {{ tag }}</a>
+    &nbsp; 
+    <a href="{{ site.baseurl }}{{ site.tag_page }}#{{ tag  | slugify }}" class="post-tag"> {{ tag }}</a>
   {% endfor %}
   {% endif %}
   <p></p>
