--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -8,8 +8,7 @@ layout: page
 -->
 <div class="post">
   <!-- <h1 class="post-title">{{ page.title }}</h1> -->
-  <p></p>
-  posted on {{ page.date | date: '%d %B %Y   ' }}
+  {{ page.date | date: '%d %B %Y   ' }}  - {{page.duration}} min read
   <p></p>
   <p></p>
   Tags: 
@@ -31,12 +30,24 @@ layout: page
   <ul class="related-posts">
     {% for post in site.related_posts limit:3 %}
       <li>
-        <h4>
-          <a href="{{ site.baseurl }}{{ post.url }}">
-            <small>{{ post.title }}</small>
+      <font size="4">
+          <a href="{{ site.baseurl }}{{ post.url }}"> <small>{{ post.title }}</small>
           </a>
-        </h4>
+          </font>
       </li>
     {% endfor %}
   </ul>
 </div>
+
+<p></p>
+
+<div class="share-page">
+    <h3>Share this! </h3>
+    <a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url }}&via={{ site.twitter_username }}&related={{ site.twitter_username }}" rel="nofollow" target="_blank" title="Share on Twitter">Twitter</a> &nbsp; 
+    <a href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Facebook">Facebook</a>&nbsp; 
+    <a href="https://plus.google.com/share?url={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Google+">Google+</a>
+</div>
+
+<p>&nbsp; </p>
+
+{% include disqus.html %}
