--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -15,7 +15,7 @@ layout: page
   {% if page.tags %}  
   {% for tag in page.tags %}
     &nbsp; 
-    <a href="/photomancer{{ site.tag_page }}#{{ tag  | slugify }}" class="post-tag"> {{ tag }}</a>
+    <a href="/photomancer/blog/tags#{{ tag  | slugify }}" class="post-tag"> {{ tag }}</a>
   {% endfor %}
   {% endif %}
   <p></p>
